--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -38,7 +38,7 @@
   </view>
   <!--这是滑动导航列表  -->
   <scroll-view class='nav-scroll-box' scroll-x="{{true}}">
-    <view class='scroll-item' wx:key="{{index}}" wx:for="{{navList}}">{{item.cat_name}}</view>
+    <view bindtap='changClass' data-num="{{index}}" id="{{index}}" class="{{num == index ? 'scroll-item active' : 'scroll-item'}}" wx:key="{{index}}" wx:for="{{navList}}">{{item.cat_name}}</view>
   </scroll-view>
   <!--这是商品列表  -->
   <view class='list-box' wx:for="{{commodityList}}" wx:key="{{index}}">
