设计圈的朋友列表的样式以及 在请求头header中带入token

--- a/pages/design/design.wxml
+++ b/pages/design/design.wxml
@@ -1,3 +1,72 @@
-<view>
-这是设计页面
+<!--这是显示的登录页面  -->
+<view wx:if="{{!isShow}}">
+  <view class='login-logo'>
+    <image class='login-logo-img' src='https://mhero.pinhui100.com/WebApp/image/logo.png'></image>
+  </view>
+  <view class='login-input'>
+    <input maxlength="11" bindinput='seedPhone' class='login' placeholder='请输入您的手机号'></input>
+  </view>
+  <view class='login-input'>
+    <input password='{{true}}' bindinput='seedPassword' class='login' placeholder='密码'></input>
+  </view>
+  <view class='login-btn-box'>
+    <a bindtap="goToSetPassword" class="login-btn btn1">忘记密码</a>
+    <a bindtap="goToSign" class="login-btn btn2">免费注册</a>
+  </view>
+  <view class='login-btn-box'>
+    <button class="login-btn btn1 but">返回</button>
+    <button bindtap='loginEnd' class="login-btn btn2 butRight but">登录</button>
+  </view>
+</view>
+<!--这是显示的设计师的列表  -->
+<view wx:if="{{isShow}}">
+<!--这是设计师的好友列表  -->
+  <view class='friend-list-header'>
+    <text class='friend-list-header-icon'></text>
+     <text>设计师</text> 
+     <text class='friend-header-more'>更多 ></text>
+  </view>
+<!--这是设计师的好友列表  -->
+  <view class='friend-list-body'>
+    <view class='friend-list-info'>
+      <image src='https://pinbaihuidesigner.oss-cn-beijing.aliyuncs.com/avatar/150881278860461.jpg' class='info-img'></image>
+      <text class='friend-name'>曹勇斐</text>
+      <text class='friend-style'>新古典、新中式、日式</text>
+      <text class='add-friend'>+ 好友</text>
+    </view>
+    <view class='friend-list-info'>
+      <image src='https://pinbaihuidesigner.oss-cn-beijing.aliyuncs.com/avatar/150881278860461.jpg' class='info-img'></image>
+      <text class='friend-name'>曹勇斐</text>
+      <text class='friend-style'>新古典、新中式、日式</text>
+      <text class='add-friend'>+ 好友</text>
+    </view>
+  </view>
+  <!--实名动态，匿名动态 导航 -->
+  <view class='autonym-nav'>
+    <text class='autonym-nav-text active'>实名动态</text>
+    <text class='autonym-nav-text text-right'>匿名动态</text>
+  </view>
+  <!--实名动态列表  -->
+  <view>
+  <!--实名转发动态列表  -->
+    <view>
+      <view class='transmit-header'>
+        <image></image>
+        <view>
+          <text>曹勇斐</text>
+          <text>新古典、新中式、日式</text>
+        </view>
+      </view> 
+      <view>
+        <text>转发来自于设计师</text>
+        <text>曹勇斐</text>
+      </view>
+      <view>
+        <text>都在干嘛</text>
+      </view>
+      <view>
+        <image></image>
+      </view>
+    </view>
+  </view> 
 </view>
